Updated the tablet layout so the spacing issues are fixed and breakpoints are correct.

--- a/css/index.css
+++ b/css/index.css
@@ -557,6 +557,11 @@ main {
   display: flex;
   justify-content: center;
 }
+@media only screen and (max-width: 1000px) {
+  .sectionC h2 {
+    font-size: 2rem;
+  }
+}
 @media only screen and (max-width: 500px) {
   .sectionC {
     flex-direction: column-reverse;
@@ -564,7 +569,7 @@ main {
   }
 }
 .sectionC .indent {
-  height: 60rem;
+  height: auto;
   width: 40rem;
   border-radius: 2.5rem;
   background: #3C8C9E;
@@ -573,6 +578,14 @@ main {
   justify-content: center;
   flex-direction: flex-end;
   align-items: center;
+}
+@media only screen and (max-width: 1000px) {
+  .sectionC .indent {
+    justify-content: space-between;
+    flex-direction: row;
+    width: 30%;
+    margin: 0.5rem;
+  }
 }
 @media only screen and (max-width: 500px) {
   .sectionC .indent {
@@ -596,6 +609,14 @@ main {
   font-style: 'Lora', serif;
   color: #C9E5EB;
 }
+@media only screen and (max-width: 1000px) {
+  .sectionC .text-container {
+    width: 65%;
+    margin: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+  }
+}
 @media only screen and (max-width: 500px) {
   .sectionC .text-container {
     display: flex;
@@ -608,6 +629,19 @@ main {
 .sectionC p {
   font-size: 2rem;
   padding: 0 1.5rem;
+}
+@media only screen and (max-width: 1000px) {
+  .sectionC p {
+    width: 100%;
+    margin: 0.5rem;
+    font-size: 1.2rem;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .sectionC div {
+    width: 50%;
+    margin: 0.5rem;
+  }
 }
 .sectionD {
   background-image: url("../images/airplane_window.jpg");
@@ -654,6 +688,7 @@ main {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 .sectionE {
+  color: white;
   height: auto;
   background-image: url("../images/volkswagon-min.jpg");
   background-repeat: no-repeat;
@@ -677,6 +712,11 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media only screen and (max-width: 1000px) {
+  .sectionE form div {
+    width: 90%;
+  }
 }
 @media only screen and (max-width: 500px) {
   .sectionE form div {
